Fix Bug 240820 - [Usability Bug] Handling Bad Filenames, dolphin gives unclear error message Fix Bug 308597 - Regression: Renaming a file/folder to something that contains a "/" will result in several message boxes

Uses the same solution as Dolphin-Rename-Dialog does. (KIO::encodeFileName)

BUG: 240820
BUG: 308597
REVIEW: 107681
FIXED-IN: 4.9.5